fixes after backport